Removed z-index from map and added link to report bugs.

--- a/css/anteaternetwork.css
+++ b/css/anteaternetwork.css
@@ -67,7 +67,6 @@ img {
   -moz-box-shadow: 0px 5px 20px #ccc;
   -webkit-box-shadow: 0px 5px 20px #ccc;
   box-shadow: 0px 5px 20px #ccc;
-  z-index: -1;
 }
 
 #js-results {
